refactor(pihole): Update FTLCONF keys and DHCP options
- Updates Pi-hole FTL configuration to use the new format for cache and rate-limiting settings (e.g., ).
- Removes legacy  and other redundant DHCP settings.
- Adjusts default values for cache size and rate limiting for better performance.

--- a/roles/pihole/defaults/main.yml
+++ b/roles/pihole/defaults/main.yml
@@ -5,6 +5,6 @@ google_dns_servers:
   - 8.8.4.4
 
 # Pi-hole cache optimization settings
-pihole_cache_size: 100000
-pihole_cache_max_age: 86400  # 24 hours in seconds
-pihole_rate_limit: "1000/1h"
+pihole_cache_size: 10000
+pihole_rate_limit_count: 10000
+pihole_rate_limit_interval: 60
