feat(n8n): Pin n8n to version 2.0.0 and force rebuild
- Pins the n8n Docker image to version 2.0.0 to ensure a stable and predictable version is used.
- Forces a rebuild of the custom n8n image to apply the version change.

--- a/roles/n8n/tasks/main.yml
+++ b/roles/n8n/tasks/main.yml
@@ -29,6 +29,7 @@
     name: custom/n8n
     tag: latest
     source: build
+    force_source: true
     build:
       path: "{{ dockerfile_temp_dir.path }}"
       pull: true
