--- a/roles/wyoming_openai/tasks/main.yml
+++ b/roles/wyoming_openai/tasks/main.yml
@@ -67,7 +67,6 @@
             - log_level=info
             - WHISPER__MODEL={{ stt_model }}
             - WHISPER__compute_type=int8_float32
-            - CUDA_VISIBLE_DEVICES=1
           volumes:
             - "{{ huggingface_cache_folder }}:/home/ubuntu/.cache/huggingface/hub"
           healthcheck:
@@ -83,6 +82,7 @@
               reservations:
                 devices:
                   - driver: nvidia
+                    device_ids: ["{{ primary_gpu_uuid }}"]
                     capabilities: ["gpu"]
 
         chatterbox-tts:
@@ -142,7 +142,7 @@
               reservations:
                 devices:
                   - driver: nvidia
-                    device_ids: ["GPU-070fdafb-63c8-9e3e-635e-9c29ba36f82f"]
+                    device_ids: ["{{ primary_gpu_uuid }}"]
                     capabilities: [gpu]
 
         chatterbox-frontend:
