feat: Update LLM service configurations and documentation
- Refactor LLM service architecture in README.md for clarity on host roles, core services, dependencies, and deployment.
- Update GPU UUIDs (rename primary_gpu_uuid to blackwell_gpu_uuid, add ampere_gpu_uuid) and remove litellm_proxy_ui_port from group_vars/all/config.yml.
- Move group_vars/ailab_ubuntus/llms.yml to group_vars/all/llms.yml and significantly update LLM model definitions for llamaswap, including context sizes, GPU assignments, and model groups.
- Align GPU device_ids in immich_ml and wyoming_openai docker-compose templates with the new blackwell_gpu_uuid.
- Enhance llamaswap_config.yaml.j2 to handle model preload variants.
- Update litellm proxy defaults and configuration to reflect new fallback mechanisms and removed UI port.

--- a/group_vars/all/config.yml
+++ b/group_vars/all/config.yml
@@ -69,7 +69,8 @@ immich_redis_hostname: "192.168.50.5"  # homelab-nuc IP
 immich_redis_port: 6379
 immich_ml_gpu_enabled: true
 # GPU configuration
-primary_gpu_uuid: "GPU-070fdafb-63c8-9e3e-635e-9c29ba36f82f"
+blackwell_gpu_uuid: "GPU-070fdafb-63c8-9e3e-635e-9c29ba36f82f"
+ampere_gpu_uuid: "GPU-c6f73144-d84f-a322-c5c0-32f97393fbbc"
 open_webui_config_folder: "{{ config_root }}/open-webui"
 sunshine_address: 192.168.50.33
 sunshine_http_port: 47990
@@ -91,7 +92,6 @@ config_root: /home/{{ username }}/config
 base_src_path: /opt/src # Base path for cloning source repos
 ollama_host: ailab-ubuntu.lan
 litellm_proxy_port: 4000
-litellm_proxy_ui_port: 4001
 langfuse_port: 3003
 homeassistant_config_folder: "{{ config_root }}/home-assistant"
 homeassistant_media_folder: /tank/medien
