--- a/roles/wyoming_openai/tasks/main.yml
+++ b/roles/wyoming_openai/tasks/main.yml
@@ -82,7 +82,7 @@
               reservations:
                 devices:
                   - driver: nvidia
-                    device_ids: ["{{ primary_gpu_uuid }}"]
+                    device_ids: ["{{ blackwell_gpu_uuid }}"]
                     capabilities: ["gpu"]
 
         chatterbox-tts:
@@ -142,7 +142,7 @@
               reservations:
                 devices:
                   - driver: nvidia
-                    device_ids: ["{{ primary_gpu_uuid }}"]
+                    device_ids: ["{{ blackwell_gpu_uuid }}"]
                     capabilities: [gpu]
 
         chatterbox-frontend:
