fix(waha): Add credentials and CA trust
- Add support for dashboard username and password to the waha role.
- Mount the Caddy CA certificate and set NODE_EXTRA_CA_CERTS to ensure the service can trust the internal CA.
- This resolves the 'disconnected worker' issue by ensuring the API key and dashboard credentials are set and persisted.

--- a/roles/waha/defaults/main.yml
+++ b/roles/waha/defaults/main.yml
@@ -7,3 +7,6 @@ waha_sessions_folder: "{{ waha_config_folder }}/sessions"
 waha_engine: "WEBJS" # Options: WEBJS (Puppeteer) or NOWEB (Baileys)
 waha_api_key: "{{ waha_api_key_secret | default('waha_default_secret') }}"
 waha_webhook_url: "" # Set this in secrets or host_vars to point to n8n
+waha_dashboard_username: "{{ waha_dashboard_username_secret | default('admin') }}"
+waha_dashboard_password: "{{ waha_dashboard_password_secret | default('waha_default_secret') }}"
+
