--- a/roles/waha/defaults/main.yml
+++ b/roles/waha/defaults/main.yml
@@ -5,8 +5,11 @@ waha_port: 3000
 waha_config_folder: "{{ config_root }}/waha"
 waha_sessions_folder: "{{ waha_config_folder }}/sessions"
 waha_engine: "WEBJS" # Options: WEBJS (Puppeteer) or NOWEB (Baileys)
-waha_api_key: "{{ waha_api_key_secret | default('waha_default_secret') }}"
+waha_api_key: "{{ waha_api_key_secret | default('w4h4') }}"
 waha_webhook_url: "" # Set this in secrets or host_vars to point to n8n
-waha_dashboard_username: "{{ waha_dashboard_username_secret | default('admin') }}"
-waha_dashboard_password: "{{ waha_dashboard_password_secret | default('waha_default_secret') }}"
+waha_base_url: "https://waha.lan"
+waha_dashboard_username: "{{ waha_dashboard_username_secret | default('w4h4') }}"
+waha_dashboard_password: "{{ waha_dashboard_password_secret | default('w4h4') }}"
+whatsapp_swagger_username: "{{ whatsapp_swagger_username_secret | default('w4h4') }}"
+whatsapp_swagger_password: "{{ whatsapp_swagger_password_secret | default('w4h4') }}"
 
