--- a/roles/waha/tasks/main.yml
+++ b/roles/waha/tasks/main.yml
@@ -24,13 +24,16 @@
       - "{{ caddy_data_folder }}/caddy/pki/authorities/local/root.crt:/usr/local/share/ca-certificates/caddy_local_root.crt:ro"
     env:
       WHATSAPP_DEFAULT_ENGINE: "{{ waha_engine }}"
-      WAHA_API_KEY: "{{ waha_api_key }}"
+      WAHA_API_KEY: "{{ waha_api_key_secret | default('w4h4') }}"
       WAHA_WEBHOOK_URL: "{{ waha_webhook_url | default('') }}"
       # Print QR code to console for easy setup if needed
       WAHA_PRINT_QR: "True"
       NODE_EXTRA_CA_CERTS: /usr/local/share/ca-certificates/caddy_local_root.crt
-      WAHA_DASHBOARD_USERNAME: "{{ waha_dashboard_username }}"
-      WAHA_DASHBOARD_PASSWORD: "{{ waha_dashboard_password }}"
+      WAHA_DASHBOARD_USERNAME: "{{ waha_dashboard_username_secret | default('w4h4') }}"
+      WAHA_DASHBOARD_PASSWORD: "{{ waha_dashboard_password_secret | default('w4h4') }}"
+      WAHA_BASE_URL: "https://waha.lan"
+      WHATSAPP_SWAGGER_USERNAME: "{{ whatsapp_swagger_username_secret | default('w4h4') }}"
+      WHATSAPP_SWAGGER_PASSWORD: "{{ whatsapp_swagger_password_secret | default('w4h4') }}"
 
     labels:
       homepage.group: "{{ services['waha'].group }}"
