--- a/group_vars/all/llms.yml
+++ b/group_vars/all/llms.yml
@@ -258,15 +258,57 @@ llamaswap_models:
       /app/llama-server
       -hf unsloth/gpt-oss-120b-GGUF:F16
       --port ${PORT}
-      --threads -1
+      --threads 12
+      --threads-batch 12
       --ctx-size 16384
+      --flash-attn on
       --n-gpu-layers 99
-      --tensor-split 6,1
+      --cache-type-k q4_0
+      --cache-type-v q4_0
       --temp 1.0
       --min-p 0.0
       --top-p 1.0
       --top-k 0.0
-      --n-cpu-moe 20
+      -ot ".*attn_.*=CUDA0"
+      -ot ".*ffn_(norm|gate_inp).*=CUDA0"
+      -ot "blk\\.([0-9]|1[0-9]|2[0-4])\\.ffn_.*_exps.*=CPU"
+      -ot "blk\\.(2[5-9]|3[0-5])\\.ffn_.*_exps.*=CUDA0"
+      --jinja
+    supports_function_calling: true
+    supports_vision: false
+    supports_reasoning: true
+    group: "3090"
+    env:
+      - "CUDA_VISIBLE_DEVICES={{ampere_gpu_uuid}}"
+    variants:
+      high:
+        chat_template_kwargs:
+          reasoning_effort: "high"
+      low:
+        chat_template_kwargs:
+          reasoning_effort: "low"
+
+  - alias: gpt-oss-120b-hybrid
+    cmd: >-
+      /app/llama-server
+      -hf unsloth/gpt-oss-120b-GGUF:F16
+      --port ${PORT}
+      --threads 12
+      --threads-batch 12
+      --ctx-size 16384
+      --flash-attn on
+      --n-gpu-layers 99
+      --cache-type-k q4_0
+      --cache-type-v q4_0
+      --temp 1.0
+      --min-p 0.0
+      --top-p 1.0
+      --top-k 0.0
+      -ot ".*attn_.*=CUDA0"
+      -ot ".*ffn_(norm|gate_inp).*=CUDA0"
+      -ot "blk\\.([0-4])\\.ffn_.*_exps.*=CUDA1"
+      -ot "blk\\.([5-9]|1[0-9]|2[0-4])\\.ffn_.*_exps.*=CPU"
+      -ot "blk\\.(2[5-9]|3[0-5])\\.ffn_.*_exps.*=CUDA0"
       --jinja
     supports_function_calling: true
     supports_vision: false
