fix(waha): Update default usernames for dashboard and Swagger configuration

--- a/roles/waha/defaults/main.yml
+++ b/roles/waha/defaults/main.yml
@@ -7,7 +7,7 @@ waha_sessions_folder: "{{ waha_config_folder }}/sessions"
 waha_engine: "WEBJS" # Options: WEBJS (Puppeteer) or NOWEB (Baileys)
 waha_api_key: "{{ waha_api_key_secret | default('w4h4') }}"
 waha_base_url: "https://waha.lan"
-waha_dashboard_username: "{{ waha_dashboard_username_secret | default('w4h4') }}"
+waha_dashboard_username: "{{ waha_dashboard_username_secret | default('admin') }}"
 waha_dashboard_password: "{{ waha_dashboard_password_secret | default('w4h4') }}"
-whatsapp_swagger_username: "{{ whatsapp_swagger_username_secret | default('w4h4') }}"
+whatsapp_swagger_username: "{{ whatsapp_swagger_username_secret | default('admin') }}"
 whatsapp_swagger_password: "{{ whatsapp_swagger_password_secret | default('w4h4') }}"
