--- a/group_vars/all/llms.yml
+++ b/group_vars/all/llms.yml
@@ -156,6 +156,27 @@ llamaswap_models:
     env:
       - "CUDA_VISIBLE_DEVICES={{ampere_gpu_uuid}}"
 
+  - alias: Nemotron-3-Nano-30B-A3B
+    cmd: >-
+      /app/llama-server
+      -hf unsloth/Nemotron-3-Nano-30B-A3B-GGUF:Q4_K_XL
+      --port ${PORT}
+      --ctx-size 98304
+      --flash-attn auto
+      --n-gpu-layers 99
+      --threads -1
+      --prio 3
+      --min-p 0.01
+      --temp 0.6
+      --top-p 0.95
+      --jinja
+    supports_function_calling: true
+    supports_vision: false
+    supports_reasoning: true
+    group: "3090"
+    env:
+      - "CUDA_VISIBLE_DEVICES={{ampere_gpu_uuid}}"
+
   - alias: Apriel-1.6-15b-Thinker
     cmd: >-
       /app/llama-server
@@ -252,6 +273,40 @@ llamaswap_models:
     supports_vision: false
     supports_reasoning: false
     group: "big_boys"
+
+  - alias: Seed-OSS-36B-Instruct
+    cmd: >-
+      /app/llama-server
+      -hf unsloth/Seed-OSS-36B-Instruct-GGUF:Q6_K
+      --port ${PORT}
+      --ctx-size 65536
+      --flash-attn auto
+      --n-gpu-layers 99
+      --tensor-split 44,20
+      --cache-type-k q8_0
+      --cache-type-v q8_0
+      --threads -1
+      --temp 1.1
+      --top-p 0.95
+      --n-predict 16384
+      --jinja
+    supports_function_calling: true
+    supports_vision: false
+    supports_reasoning: true
+    group: "big_boys"
+    variants:
+      high:
+        chat_template_kwargs:
+          thinking_budget: 2048
+      medium:
+        chat_template_kwargs:
+          thinking_budget: 1024
+      low:
+        chat_template_kwargs:
+          thinking_budget: 512
+      nothink:
+        chat_template_kwargs:
+          thinking_budget: 0
 
   - alias: gpt-oss-120b
     cmd: >-
