--- a/roles/llm_inference/tasks/main.yml
+++ b/roles/llm_inference/tasks/main.yml
@@ -59,7 +59,7 @@
 - name: Start the llama-swap container
   community.docker.docker_container:
     name: "{{ llamaswap_container_name }}"
-    image: ghcr.io/mostlygeek/llama-swap:cuda
+    image: "{{ llamaswap_image }}"
     image_name_mismatch: recreate
     pull: true
     state: started
