feat(llm): integrate standard Ollama models and pin GPU resources
- Add support for 'ollama_models' in LiteLLM configuration template
- Enable 'num_ctx' passthrough for Ollama chat models
- Pin ComfyUI to Ampere GPU (3090)
- Pin Ollama to Blackwell GPU (5060 Ti)

--- a/roles/comfyui/tasks/main.yml
+++ b/roles/comfyui/tasks/main.yml
@@ -19,7 +19,7 @@
     restart_policy: unless-stopped
     device_requests:
       - driver: nvidia
-        count: -1
+        device_ids: ["{{ ampere_gpu_uuid }}"]
         capabilities:
           - ["gpu"]
     ports:
