--- a/roles/homeassistant/tasks/main.yml
+++ b/roles/homeassistant/tasks/main.yml
@@ -51,7 +51,7 @@
 
 - name: Add z2m config
   ansible.builtin.template:
-    src: configuration.yaml
+    src: configuration.yaml.j2
     dest: "{{ zigbee2mqtt_data_folder }}/configuration.yaml"
     owner: "{{ username }}"
     group: users
@@ -233,8 +233,6 @@
             - "{{ z2m_http_port }}:8080"
           environment:
             - TZ=Europe/Berlin
-          devices:
-            - /dev/ttyUSB0:/dev/ttyACM1
           restart: always
           labels:
             - wud.tag.include=latest
